src/app/pages/projects/projects.scss
@import '../../../_variables.scss';

$cardW: 350px;

#body {
   background-color: $bg-page;
   color: $text-page;
}

// PROJECTS
#projects {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
   padding: 20px;
   max-width: 1000px;
   margin: auto;

   .mycard {
      flex: 0 0 auto;
      width: 100%;
      max-width: $cardW;
      margin: 0 20px 75px 20px;
      text-align: center;
   }

   .mycard:nth-child(3),
   .mycard:nth-child(4) {
      margin-bottom: 0;
   }

   img, a, small {
      display: block;
   }

   img {
      width: 100%;
      margin-bottom: 10px;
      border-radius: 5px;
   }

   small {
      margin-bottom: 10px;
      color: $theme-one;
      font-size: .9rem;
   }

   p {
      text-align: left;
      margin-bottom: 10px;
   }
}

